[project]
name = "math-simulator"
version = "0.2.0"
description = "Math simulator for kids"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "clang>=21.1.7",
    "cmake>=4.2.1",
    "flet[all]>=0.80.2",
    "pillow>=12.1.0",
    "pyinstaller>=6.18.0",
]

[tool.flet]
app_name = "Math Simulator"
org = "ua.mathsimulator"
assets_dir = "assets"
